--- a/button.html
+++ b/button.html
@@ -139,22 +139,22 @@
 	<div id="gradient" class="box">
 		<h2>Gradients</h2>
 		<div class="lalign">
-			<button type="button" class="large o-gradient">Get Started</button>
+			<button type="button" class="small o-gradient">Get Started</button>
 			<div class="vspace"></div>
 			<button type="button" class="large o-gradient custom">Get Started</button>
 		</div>
 		<div class="lalign">
 			<button type="button" class="small g-gradient">Search</button>
-			<div class="vspace" style="padding-bottom:10px;"></div>
+			<div class="vspace"></div>
 			<button type="button" class="large g-gradient custom">Search</button>			
 		</div>
 		<div class="lalign">
-			<button type="button" class="large b-gradient">Buy It Now</button>
+			<button type="button" class="small b-gradient">Buy It Now</button>
 			<div class="vspace"></div>
 			<button type="button" class="large b-gradient custom">Buy It Now</button>			
 		</div>
 		<div class="lalign">
-			<button type="button" class="large gray-gradient">Cancel</button>
+			<button type="button" class="small gray-gradient">Cancel</button>
 			<div class="vspace"></div>
 			<button type="button" class="large gray-gradient custom">Cancel</button>			
 		</div>					
