--- a/button.html
+++ b/button.html
@@ -23,6 +23,15 @@
 			border-radius: 50%;
 			margin-top: 16px;
 		}
+		.author:hover {
+			background: url("http://i.ebayimg.com/00/s/MTA2MlgxNjAw/$%28KGrHqF,!l0E6B0qR%29twBOhkE1NVmw~~60_23.JPG") no-repeat -25px 1px;
+			float: left;
+			height: 80px;
+			width: 80px;
+			border: 3px solid yellow;
+			border-radius: 50%;
+			margin-top: 16px;
+		}		
 		.signature {
 			font: italic 17px Sans MS;
 		}		
@@ -187,7 +196,7 @@
 		<div class="clear"></div>		
 	</div>
 	<div id="oval" class="box" style="margin-top:20px; display:block;">
-		<h2>Oval</h2>
+		<h2>Oval </h2>
 		<div class="lalign">
 			<button type="button" class="small oval o-gradient">Get Started</button>
 			<div class="vspace"></div>
