--- a/button.html
+++ b/button.html
@@ -24,7 +24,7 @@
 			height: 40px;
 			width: 40px;
 			border: 3px solid yellow;
-			border-radius: 50%;
+			border-radius: 28px;
 			left: 530px;
 			margin-top: 21px;
 		}
@@ -34,7 +34,7 @@
 			height: 80px;
 			width: 80px;
 			border: 3px solid yellow;
-			border-radius: 50%;
+			border-radius: 56px;
 			margin-top: 5px;
 		}		
 		.signature {
@@ -163,7 +163,7 @@
 			color: #002398;
 		}	
 		button.gray-disabled {
-			cursor: default;
+			cursor: not-allowed;
 			color: #CCC;
 			border-color: #CCC;					
 			background-color: #FEFEFE; /* Old browsers */
