--- a/button.html
+++ b/button.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "_http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -9,10 +9,9 @@
 			margin: 0 auto;
 		}
 		h1 {
-			margin: 25px 7px 30px 300px;
+			margin: 25px 0 30px;
 			color: gray;
 			text-align: center;
-			float: left;
 		}
 		.wrapper {
 			position: relative;
@@ -184,11 +183,11 @@
 <body>
 	<div>
 		<h1>Smart Buttons 
-			<span class="signature">by</span>
+			<!-- <span class="signature">by</span>  -->
 		</h1>
-		<div class="wrapper">
+		<!--   <div class="wrapper">
 			<a href="http://twitter.com/#!/senthil_hi" target="blank"><div class="author"></div></a>
-		</div>			
+		</div>	-->		
 	</div>
 	<div id="gradient" class="clear box">
 		<h2>Gradients</h2>
